updated docs and added another test for cropping

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "geo-extent.js",
   "type": "module",
   "scripts": {
-    "format": "npx prettier --arrow-parens=avoid --print-width=120 --trailing-comma=none --write *.js",
+    "format": "npx prettier --arrow-parens=avoid --print-width=120 --trailing-comma=none --write *.js test/*.js",
     "test": "for f in ./test/*; do node $f; done",
     "test:html": "npx snowpack dev --polyfill-node"
   },
