--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "geo-extent",
   "version": "0.4.0",
   "description": "Simple, Modern Geospatial Bounding Boxes",
-  "main": "./dist/geo-extent.cjs",
-  "module": "./dist/geo-extent.mjs",
+  "main": "dist/geo-extent.cjs",
+  "module": "dist/geo-extent.mjs",
   "type": "module",
   "files": [
     "src/geo-extent.js",
