--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "leaflet": "^1.7.1"
   },
   "dependencies": {
-    "big.js": "^6.1.1",
     "get-epsg-code": "^0.0.7",
+    "preciso": "^0.2.0",
     "reproject-bbox": "^0.2.0"
   }
 }
