--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "cp ./src/geo-extent.js ./dist/geo-extent.mjs && npx babel ./src/geo-extent.js --out-file ./dist/geo-extent.cjs --plugins=@babel/plugin-transform-modules-commonjs",
+    "browserify": "npx browserify ./dist/geo-extent.cjs > ./dist/geo-extent.browserify.js",
     "f": "npm run format",
     "format": "npx prettier --arrow-parens=avoid --print-width=120 --trailing-comma=none --write src/*.js test/*.js test/*.mjs",
     "prepublishOnly": "npm run format",
@@ -45,8 +46,8 @@
   },
   "homepage": "https://github.com/DanielJDufour/geo-extent#readme",
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
     "@babel/helper-compilation-targets": "^7.18.9",
     "@babel/helper-validator-option": "^7.18.6",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
@@ -57,7 +58,7 @@
   },
   "dependencies": {
     "get-epsg-code": "^0.0.7",
-    "preciso": "^0.7.1",
-    "reproject-bbox": "^0.4.0"
+    "preciso": "^0.8.0",
+    "reproject-bbox": "^0.4.1"
   }
 }
