--- a/package.json
+++ b/package.json
@@ -46,19 +46,20 @@
   },
   "homepage": "https://github.com/DanielJDufour/geo-extent#readme",
   "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.18.13",
-    "@babel/helper-compilation-targets": "^7.18.9",
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/helper-compilation-targets": "^7.20.7",
     "@babel/helper-validator-option": "^7.18.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "flug": "^2.3.1",
-    "global-jsdom": "^8.5.0",
-    "jsdom": "^17.0.0",
-    "leaflet": "^1.8.0"
+    "global-jsdom": "^8.7.0",
+    "jsdom": "^21.0.0",
+    "leaflet": "^1.9.3"
   },
   "dependencies": {
-    "get-epsg-code": "^0.0.7",
+    "get-epsg-code": "^0.1.0",
     "preciso": "^0.8.0",
-    "reproject-bbox": "^0.4.1"
+    "reproject-bbox": "^0.5.0",
+    "reproject-geojson": "^0.3.0"
   }
 }
