--- a/package.json
+++ b/package.json
@@ -49,19 +49,20 @@
   },
   "homepage": "https://github.com/DanielJDufour/geo-extent#readme",
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
     "@babel/helper-compilation-targets": "^7.20.7",
-    "@babel/helper-validator-option": "^7.18.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
-    "flug": "^2.3.1",
+    "@babel/helper-validator-option": "^7.21.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "flug": "^2.5.0",
     "global-jsdom": "^8.7.0",
-    "jsdom": "^21.0.0",
+    "jsdom": "^21.1.0",
     "leaflet": "^1.9.3"
   },
   "dependencies": {
+    "bbox-fns": "^0.2.0",
     "get-epsg-code": "^0.1.0",
-    "preciso": "^0.8.0",
+    "preciso": "^0.10.0",
     "reproject-bbox": "^0.5.0",
     "reproject-geojson": "^0.3.0"
   }
