--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "browserify": "npx browserify ./dist/geo-extent.cjs > ./dist/geo-extent.browserify.js",
     "f": "npm run format",
     "format": "npx prettier --arrow-parens=avoid --print-width=120 --trailing-comma=none --write src/*.js test/*.js test/*.mjs",
-    "prepublishOnly": "npm run format",
+    "prepublishOnly": "npm run format && npm run build && npm run browserify && npm run test",
     "test": "for f in ./test/*; do echo \"node $f\" && node $f && echo \"npx ts-node $f\" && npx ts-node $f; done"
   },
   "repository": {
