--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "cp ./src/geo-extent.js ./dist/geo-extent.mjs && npx babel ./src/geo-extent.js --out-file ./dist/geo-extent.cjs --plugins=@babel/plugin-transform-modules-commonjs",
     "browserify": "npx browserify ./dist/geo-extent.cjs > ./dist/geo-extent.browserify.js",
     "f": "npm run format",
-    "format": "npx prettier --arrow-parens=avoid --print-width=120 --trailing-comma=none --write src/*.js test/*.js test/*.mjs",
+    "format": "npx prettier --arrow-parens=avoid --print-width=120 --trailing-comma=none --write *.ts src/*.js test/*.js test/*.mjs",
     "prepublishOnly": "npm run format && npm run build && npm run browserify && npm run test",
     "test": "for f in ./test/*; do echo \"node $f\" && node $f && echo \"npx ts-node $f\" && npx ts-node $f; done"
   },
@@ -49,21 +49,21 @@
   },
   "homepage": "https://github.com/DanielJDufour/geo-extent#readme",
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
-    "@babel/helper-compilation-targets": "^7.20.7",
-    "@babel/helper-validator-option": "^7.21.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
-    "flug": "^2.5.0",
-    "global-jsdom": "^8.7.0",
-    "jsdom": "^21.1.0",
-    "leaflet": "^1.9.3"
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/helper-compilation-targets": "^7.22.5",
+    "@babel/helper-validator-option": "^7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "flug": "^2.6.0",
+    "global-jsdom": "^9.0.1",
+    "jsdom": "^22.1.0",
+    "leaflet": "^1.9.4"
   },
   "dependencies": {
-    "bbox-fns": "^0.3.0",
+    "bbox-fns": "^0.11.0",
     "get-epsg-code": "^0.1.0",
     "preciso": "^0.12.0",
-    "reproject-bbox": "^0.6.0",
+    "reproject-bbox": "^0.10.0",
     "reproject-geojson": "^0.3.0"
   }
 }
