--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "geo-extent",
   "version": "1.4.0",
   "description": "Simple, Modern Geospatial Bounding Boxes",
-  "main": "dist/geo-extent.cjs",
+  "main": "./dist/geo-extent.cjs",
   "module": "dist/geo-extent.mjs",
   "unpkg": "dist/geo-extent.bundle.js",
   "jsdelivr": "dist/geo-extent.bundle.js",
